objects/SFDC_Salary_History__c.object
<CustomObject>
    <fields>
        <fullName>Annual_OTE__c</fullName>
        <label>Annual OTE</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Salary__c</fullName>
        <label>Base Salary</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Salary History</relationshipLabel>
        <relationshipName>R00N30000001eUPwEAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quarterly_Bonus__c</fullName>
        <formula>(Annual_OTE__c - Base_Salary__c ) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarterly Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salary_End_Date__c</fullName>
        <label>Salary End Date</label>
        <type>Date</type>
    </fields>
    <label>Salary History</label>
    <language>en_US</language>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SAL-{00000}</displayFormat>
        <label>Salary History #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salary History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>